# robotics-integration-te3003b

./: .gitignore
embedded_verilog/and_gate/: a.out  and_gate.v  and_gate_tb.v  waveform.vcd
embedded_verilog/seven_segment/: seven_segment.v  seven_segment_tb.v
grpc/ros2_ws/src/sample_srv/: CMakeLists.txt  package.xml
grpc/ros2_ws/src/sample_srv/scripts/: vector_mul_client.py  vector_mul_server.py
grpc/ros2_ws/src/sample_srv_interfaces/: CMakeLists.txt  package.xml
grpc/ros2_ws/src/sample_srv_interfaces/srv/: VectorScalar.srv
